--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li><a href="#services">社会实践经历</a></li>
                     <li><a href="#blog">求职意向及个人技能</a></li>
                     <li><a href="#contactus" class="last">联系方式</a></li>
+
                     </ul>
                 </div>
             </div> <!-- end of sidebar -->
@@ -179,6 +180,7 @@
         <div id="templatemo_footer">
 
         Thanks for your consideration!
+        <p><h4><a href="images/github1.mp4" target="_blank">github上传代码教学视频</a></h4></p>
             
             <div class="cleaner"></div>
 		</div>       
